feat: entitystore の接続部分作成

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,6 @@ go.work.sum
 # Editor/IDE
 # .idea/
 # .vscode/
+/aememcachestore/test/
+/service-account-key.json
+/.idea/copilot.data.migration.*.xml
